# tree-sitter-language-pack

./: .gitignore  .lychee.toml  .pre-commit-config.yaml  .rumdl.toml  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  Taskfile.yml  ai-rulez.yaml  alef.toml  biome.json  composer.json  go.work  install.sh  llms.txt  mkdocs.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rust-toolchain.toml  skif.toml  tsconfig.json  zensical.toml
.ai-rulez/: INDEX.md  config.toml  config.yaml  custom-agents.yaml  custom-profiles.yaml  custom-rules.yaml
.ai-rulez/agents/: build-and-ci-ops.md  docs-scribe.md  docs-strategist.md  fixture-tester.md  integration-qa.md  interop-build-engineer.md  middleware-architect.md  php-engineer.md  python-engineer.md  ruby-engineer.md  rust-polyglot-architect.md  typescript-engineer.md  workspace-architect.md
.ai-rulez/rules/: async-friendly-performance.md  binding-level-configuration-only.md  consistent-tooling.md  cross-language-error-boundaries.md  cross-target-performance.md  ext-php-rs-binding-configuration.md  fixture-aligned-error-handling.md  fixture-backed-testing.md  fixture-driven-testing.md  fixture-first-testing.md  handler-trait-abstraction.md  header-cookie-security.md  http-error-contracts.md  http-input-validation.md  layered-code-organization.md  lifecycle-hooks-implementation.md  lint-formatting-discipline.md  optimized-serialization-path.md  php-psr-compliance-standards-enforcement.md  pyo3-async-performance.md  pyo3-extension-module-management.md  request-surface-security.md  thin-binding-pattern-architecture.md  tower-http-middleware-stack.md  workspace-organization.md  workspace-separation.md  zero-copy-json-to-python-conversion.md
.cargo/: config.toml
.github/: dependabot.yaml
.github/workflows/: ci-all-grammars.yaml  ci-c.yaml  ci-cli.yaml  ci-csharp.yaml  ci-docker.yaml  ci-elixir.yaml  ci-go.yaml  ci-java.yaml  ci-node.yaml  ci-php.yaml  ci-python.yaml  ci-ruby.yaml  ci-rust.yaml  ci-validate.yaml  ci-wasm.yaml  ci.yaml  docs.yaml  publish-docker.yaml  publish.yaml
.skif/: ir.hash  ir.json
.skif/hashes/: csharp.hash  elixir.hash  ffi.hash  go.hash  java.hash  node.hash  php.hash  python.hash  ruby.hash  wasm.hash
.task/: c.yml  csharp.yml  elixir.yml  go.yml  java.yml  node.yml  php.yml  python.yml  ruby.yml  rust.yml  test-apps.yml  version.yml  wasm.yml
.task/checksum/: clone
crates/tree-sitter-language-pack-ffi/: README.md
crates/tree-sitter-language-pack-wasm/: README.md
crates/ts-pack-cli/: Cargo.toml  README.md
crates/ts-pack-core/: Cargo.toml  README.md  build.rs  language_definitions.json
crates/ts-pack-core-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/ts-pack-core-ffi/cmake/: ts-pack-core-ffi-config.cmake
crates/ts-pack-core-ffi/include/: ts_pack.h
crates/ts-pack-core-ffi/src/: lib.rs
crates/ts-pack-core-node/: Cargo.toml  index.d.ts  package.json
crates/ts-pack-core-php/: Cargo.toml
crates/ts-pack-core-py/: Cargo.toml
crates/ts-pack-core-wasm/: Cargo.toml  package.json
crates/ts-pack-core-wasm/src/: lib.rs
crates/ts-pack-core/benches/: benchmarks.rs
crates/ts-pack-core/src/: config.rs  definitions.rs  download.rs  error.rs  extensions.rs  extract.rs  facts.rs  json_utils.rs  lib.rs  node.rs  pack_config.rs  parse.rs  process_config.rs  query.rs  registry.rs  text_splitter.rs
crates/ts-pack-core/src/intel/: chunking.rs  intelligence.rs  mod.rs  types.rs
crates/ts-pack-elixir/: Cargo.toml  README.md  mix.exs  tree_sitter_language_pack-1.0.0-rc.8.tar
crates/ts-pack-elixir/lib/: tree_sitter_language_pack.ex
crates/ts-pack-elixir/src/: lib.rs
crates/ts-pack-elixir/test/: tree_sitter_language_pack_test.exs
crates/ts-pack-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/ts-pack-ffi/include/: ts_pack.h  tslp.h
crates/ts-pack-ffi/src/: lib.rs
crates/ts-pack-go/: README.md  ffi_dev.go  generate.go  go.mod  tspack.go  tspack_test.go
crates/ts-pack-index/: Cargo.toml
crates/ts-pack-index/src/: asset_phase.rs  call_resolution.rs  clone_enrich.rs  duplicate.rs  go.rs  graph_schema.rs  lib.rs  model.rs  parse_phase.rs  pathing.rs  prep_phase.rs  provenance.rs  python.rs  rust.rs  swift.rs  tags.rs  write_phase.rs  writers.rs
crates/ts-pack-node/: Cargo.toml  README.md  index.d.ts  index.js  package.json  ts-pack-node.node  tsconfig.json
crates/ts-pack-node/npm/darwin-arm64/: package.json
crates/ts-pack-node/npm/darwin-x64/: package.json
crates/ts-pack-node/npm/linux-arm64-gnu/: package.json
crates/ts-pack-node/npm/linux-x64-gnu/: package.json
crates/ts-pack-node/npm/win32-x64-msvc/: package.json
crates/ts-pack-node/src/: lib.rs
crates/ts-pack-php/: Cargo.toml  README.md
crates/ts-pack-php/src/: lib.rs
crates/ts-pack-python/: Cargo.toml  README.md  pyproject.toml
crates/ts-pack-python/python/tree_sitter_language_pack/: __init__.py  __init__.pyi  _graph_contract.py  _semantic_contract.py  _semantic_payload.py  _swift_semantic.py
crates/ts-pack-python/src/: graph_finalize.rs  lib.rs  swift_semantic.rs
crates/ts-pack-python/src/graph_finalize/: file_graph.rs  gds.rs  provenance.rs  reporting.rs
crates/ts-pack-python/tests/: test_extract_file_facts_wrapper.py  test_semantic_payload_wrapper.py
crates/ts-pack-ruby/: Cargo.toml  README.md  Steepfile  tree_sitter_language_pack.gemspec
crates/ts-pack-ruby/sig/: tree_sitter_language_pack.rbs
crates/ts-pack-ruby/src/: lib.rs
crates/ts-pack-wasm/: Cargo.toml  README.md  package.json  tsconfig.json
crates/ts-pack-wasm/src/: lib.rs
docs/: CHANGELOG.md  calls_write_contract.md  contributing.md  index.md  languages.md  llms.txt  supported-languages.md
docs/api/: c-ffi.md  (+10 more)
fixtures/: schema.json
scripts/: check_grammar_updates.py  clone_vendors.py  convert_fixtures.py  generate_grammar_table.py  generate_readme.py  lint_grammar_licenses.py  pin_vendors.py  readme_config.yaml  sync_versions.py  test_publish_checks.sh
sources/: language_definitions.json  license_cache.json
tests/: entry_point_test.py
tree_sitter_language_pack/: __init__.py
(+1136 files in other folders)
