[package]
name = "ts-pack-core-wasm"
version = "1.6.3"
edition = "2024"
license = "MIT"
description = "Pre-compiled tree-sitter grammars for 305 programming languages"
readme = false
keywords = ["tree-sitter", "parser", "syntax", "language-pack"]
categories = ["text-processing"]
repository = "https://github.com/kreuzberg-dev/tree-sitter-language-pack"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.cargo-machete]
ignored = ["wasm-bindgen-futures"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde-wasm-bindgen = "0.6"
tree-sitter-language-pack = { path = "../ts-pack-core", features = ["download", "serde", "config"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
