[package]
name = "ts-pack-elixir"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Elixir Rustler NIF bindings for tree-sitter language pack"
publish = false

[lib]
name = "ts_pack_elixir"
crate-type = ["cdylib"]

[dependencies]
rustler = { workspace = true }
serde_json = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-language-pack = { path = "../ts-pack-core", features = ["serde", "download"] }
