[workspace]

[package]
name = "ts-pack-elixir"
version = "1.6.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/kreuzberg-dev/tree-sitter-language-pack"
description = "Elixir Rustler NIF bindings for tree-sitter language pack"
publish = false

[lib]
name = "ts_pack_elixir"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37"
serde_json = "1"
tree-sitter = "0.26"
tree-sitter-language-pack = { path = "../ts-pack-core", features = ["serde", "download"] }
