[package]
name = "ts-pack-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "C FFI bindings for tree-sitter language pack"
publish = false

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["download"]
download = ["tree-sitter-language-pack/download"]

[dependencies]
serde_json = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-language-pack = { path = "../ts-pack-core", features = ["serde", "download"] }

[build-dependencies]
cbindgen = { workspace = true }
