[package]
name = "ts-pack-index"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Neo4j indexing for tree-sitter language pack"

[dependencies]
regex = "1.10"
futures = "0.3"
neo4rs = "0.7.3"
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["time"] }
tree-sitter-language-pack = { path = "../ts-pack-core" }
walkdir.workspace = true
