[package]
name = "ts-pack-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Node.js NAPI bindings for tree-sitter language pack"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
serde_json = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-language-pack = { path = "../ts-pack-core", features = ["serde", "download"] }

[build-dependencies]
napi-build = { workspace = true }
