[package]
name = "ts-pack-php"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PHP ext-php-rs bindings for tree-sitter language pack"
publish = false

[package.metadata.cargo-machete]
ignored = ["serde_json"]

[lib]
name = "ts_pack_php"
crate-type = ["cdylib"]
test = false

[dependencies]
ext-php-rs = "0.15"
serde_json = { workspace = true }
tree-sitter-language-pack = { path = "vendor/ts-pack-core", features = ["serde", "download"] }
