[package]
name = "ts-pack-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python PyO3 bindings for tree-sitter language pack"
publish = false

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
serde_json = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-language-pack = { path = "../ts-pack-core", features = ["serde", "download"] }
