[package]
name = "ts-pack-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python PyO3 bindings for tree-sitter language pack"
publish = false

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
futures = "0.3"
futures-util = "0.3"
neo4rs = "0.7.3"
pyo3 = { workspace = true }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
rayon = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio-postgres = "0.7"
tree-sitter = { workspace = true }
tree-sitter-language-pack = { path = "../ts-pack-core", features = ["serde", "download"] }
ts-pack-index = { path = "../ts-pack-index" }
tokio = { version = "1", features = ["rt-multi-thread"] }
