[package]
name = "ts-pack-ruby"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Ruby Magnus bindings for tree-sitter language pack"
publish = false

[package.metadata.cargo-machete]
ignored = ["rb-sys"]

[lib]
name = "ts_pack_ruby"
crate-type = ["cdylib"]

[dependencies]
magnus = "0.8"
rb-sys = "0.9"
serde_json = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-language-pack = { workspace = true, features = ["serde", "download"] }
