[package]
name = "ts-pack-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for tree-sitter language pack"
publish = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tree-sitter-language-pack = { path = "../ts-pack-core", default-features = false, features = [
  "web",
  "serde",
] }
serde_json = { workspace = true }
tree-sitter = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
